[package]
name = "PokedexRPGsql"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
diesel = { version = "2.0.0", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

[dependencies.rocket_dyn_templates]
version = "0.2.0-rc.2"

[build-dependencies]
diesel_cli = { version = "2.0.0", features = ["postgres"] }